# scratchpad

./: .gitignore
blog/2023-01-21-parallel-processing-of-a-tree/: tree.py
data_structures/: binary_lifting.py  extendible_hash.py  fenwick_tree.py  fractional_cascading.py  fractional_cascading.tsv  segment_tree.py  segment_tree_2.py  segment_tree_interval.html  segment_tree_interval.js  segment_tree_interval.py  skiplist.py  test_skiplist.py
interview/: minesweeper_click.py  rotate_2d_array.py
interview/graph/: test_01_bfs.py  test_02_even_distance.py  test_dfs.py
interview/sorting/: test_counting_sort_inplace.py
leetcode-30day-challenge/01_single-number/: 01_single-number.py
leetcode-30day-challenge/02_happy-number/: 02_happy-number.py
leetcode-30day-challenge/03_maximum-subarray/: 03_maximum-subarray.py
leetcode-30day-challenge/04_move-zeros/: 04_move-zeros.py
leetcode-30day-challenge/05_best-time-to-buy-and-sell-stock-2/: 05-best-time-to-buy-and-sell-stock-2.py
leetcode-30day-challenge/06_group-anagrams/: 06_group-anagrams.py
leetcode-30day-challenge/07_counting-elements/: 07_counting-elements.py
leetcode-30day-challenge/08_middle-of-the-linked-list/: 08_middle-of-the-linked-list.py
leetcode-30day-challenge/09-backspace-string-compare/: 09_backspace-string-compare.py
leetcode-30day-challenge/10_min-stack/: 10_min-stack.py
leetcode-30day-challenge/11_diameter-of-binary-tree/: 11_diameter-of-binary-tree.py
multithreading/robot_cpp/: CMakeLists.txt  robot.cpp
myleetcode/: commands.txt  stats.txt
myleetcode/015_3sum/: 15.3sum.py
(+63 files in other folders)
